--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,187 @@
-langchain-openai
-python-dotenv
-langchain
-langchain-community
-langchain-anthropic
-langchain-google-genai
-langchain-google-firestore
-firestore
-chromadb
-tiktoken
-sentence-transformers
-bs4
-firecrawl-py
-langchainhub
-wikipedia
-tavily-python
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anthropic==0.34.2
+anyio==4.4.0
+asgiref==3.8.1
+asyncio==3.4.3
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+build==1.2.2
+CacheControl==0.14.0
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.6
+chromadb==0.5.5
+click==8.1.7
+coloredlogs==15.0.1
+cryptography==43.0.1
+dataclasses-json==0.6.7
+defusedxml==0.7.1
+Deprecated==1.2.14
+distro==1.9.0
+fastapi==0.114.0
+filelock==3.16.0
+firebase-admin==6.5.0
+firecrawl-py==1.2.3
+firestore==0.0.8
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.9.0
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.2
+google-api-python-client==2.144.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.18.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-generativeai==0.7.2
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+greenlet==3.0.3
+groq==0.11.0
+grpcio==1.66.1
+grpcio-status==1.62.3
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httptools==0.6.1
+httpx==0.27.2
+huggingface-hub==0.24.6
+humanfriendly==10.0
+idna==3.8
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+iso8601==2.1.0
+Jinja2==3.1.4
+jiter==0.5.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+kubernetes==30.1.0
+langchain==0.3.0
+langchain-anthropic==0.1.23
+langchain-community==0.3.0
+langchain-core==0.3.0
+langchain-google-firestore==0.3.0
+langchain-google-genai==1.0.10
+langchain-groq==0.2.0
+langchain-huggingface==0.1.0
+langchain-ollama==0.1.3
+langchain-openai==0.1.23
+langchain-text-splitters==0.3.0
+langchainhub==0.1.21
+langgraph==0.2.22
+langgraph-checkpoint==1.0.10
+langsmith==0.1.117
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+mdurl==0.1.2
+mmh3==4.1.0
+monotonic==1.6
+more-itertools==10.5.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.68
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+ollama==0.3.3
+onnxruntime==1.19.2
+openai==1.44.1
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.7
+overrides==7.7.0
+packaging==24.1
+pillow==10.4.0
+posthog==3.6.4
+proto-plus==1.24.0
+protobuf==4.25.4
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.9.1
+pydantic-settings==2.5.2
+pydantic_core==2.23.3
+Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.1.4
+PyPika==0.48.9
+pyproject_hooks==1.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.8.0
+rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.5.1
+scipy==1.14.1
+sentence-transformers==3.0.1
+setuptools==72.1.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.34
+starlette==0.38.5
+sympy==1.13.2
+tavily-python==0.4.0
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+tokenizers==0.19.1
+torch==2.4.1
+tqdm==4.66.5
+transformers==4.44.2
+triton==3.0.0
+typer==0.12.5
+types-requests==2.32.0.20240907
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
+uvicorn==0.30.6
+uvloop==0.20.0
+watchfiles==0.24.0
+websocket-client==1.8.0
+websockets==13.0.1
+wheel==0.43.0
+wikipedia==1.4.0
+wrapt==1.16.0
+yarl==1.11.1
+zipp==3.20.1
